--- a/index.html
+++ b/index.html
@@ -22,73 +22,39 @@
       background-color: #000;
     }
 
-    #game-over {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      display: none;
-      background-color: rgba(0, 0, 0, 0.8);
-      padding: 20px;
-      border-radius: 10px;
-    }
-
-    #game-over button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      margin: 5px;
-      cursor: pointer;
-    }
-
-    #game-over button:hover {
-      background-color: #45a049;
-    }
-
-    #score {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      font-size: 20px;
-    }
-
-    #controls {
+    .controls {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
       margin-top: 20px;
     }
 
-    #controls button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #008CBA;
+    .control-btn {
+      width: 50px;
+      height: 50px;
+      font-size: 18px;
+      background-color: #4CAF50;
       color: white;
       border: none;
-      margin: 5px;
       cursor: pointer;
     }
 
-    #controls button:hover {
-      background-color: #006080;
+    .control-btn:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
 <body>
   <canvas id="game" width="400" height="400"></canvas>
-  <div id="game-over">
-    <h1>Game Over</h1>
-    <p id="final-score">Score: 0</p>
-    <button onclick="restartGame()">Restart</button>
+  <div class="controls">
+    <button class="control-btn" id="upBtn" onclick="changeDirection('up')">↑</button>
   </div>
-  <div id="score">Score: 0</div>
-  <div id="controls">
-    <button id="startBtn" onclick="startGame()">Start</button>
-    <button id="stopBtn" onclick="stopGame()">Stop</button>
-    <button id="leftBtn" onclick="changeDirection('left')">Left</button>
-    <button id="upBtn" onclick="changeDirection('up')">Up</button>
-    <button id="rightBtn" onclick="changeDirection('right')">Right</button>
-    <button id="downBtn" onclick="changeDirection('down')">Down</button>
+  <div class="controls">
+    <button class="control-btn" id="leftBtn" onclick="changeDirection('left')">←</button>
+    <button class="control-btn" id="rightBtn" onclick="changeDirection('right')">→</button>
+  </div>
+  <div class="controls">
+    <button class="control-btn" id="downBtn" onclick="changeDirection('down')">↓</button>
   </div>
 
   <script>
@@ -101,8 +67,7 @@
     let direction = 'right';
     let food = { x: 320, y: 320 };
     let gameOver = false;
-    let gameRunning = false;
-    let speed = 10; // Adjust this value to change the speed of the game
+    let speed = 15; // Adjust this value to change the speed of the game
     let score = 0;
 
     function getRandomFoodPosition() {
@@ -123,9 +88,7 @@
     }
 
     function changeDirection(newDirection) {
-      if (!gameOver && gameRunning) {
-        direction = newDirection;
-      }
+      direction = newDirection;
     }
 
     function moveSnake() {
@@ -182,55 +145,61 @@
       if (gameOver) {
         document.getElementById('final-score').innerText = 'Score: ' + score;
         document.getElementById('game-over').style.display = 'block';
-        gameRunning = false;
         return;
       }
 
-      if (gameRunning) {
-        requestAnimationFrame(main);
+      requestAnimationFrame(main);
 
-        if (++count < speed) {
-          return;
-        }
-
-        count = 0;
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-        drawFood();
-        moveSnake();
-        drawSnake();
-
-        gameOver = checkCollision();
+      if (++count < speed) {
+        return;
       }
+
+      count = 0;
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      drawFood();
+      moveSnake();
+      drawSnake();
+
+      gameOver = checkCollision();
     }
 
     function restartGame() {
-  snake = [{ x: 160, y: 160 }, { x: 140, y: 160 }, { x: 120, y: 160 }, { x: 100, y: 160 }];
-  direction = 'right';
-  food = getRandomFoodPosition();
-  score = 0;
-  document.getElementById('score').innerText = 'Score: ' + score;
-  document.getElementById('game-over').style.display = 'none';
-  gameOver = false;
-  gameRunning = true;
-  main();
-}
+      snake = [{ x: 160, y: 160 }, { x: 140, y: 160 }, { x: 120, y: 160 }, { x: 100, y: 160 }];
+      direction = 'right';
+      food = getRandomFoodPosition();
+      gameOver = false;
+      score = 0;
+      document.getElementById('score').innerText = 'Score: ' + score;
+      document.getElementById('game-over').style.display = 'none';
+      main();
+    }
 
-document.getElementById('startBtn').addEventListener('click', startGame);
-document.getElementById('stopBtn').addEventListener('click', stopGame);
+    document.addEventListener('keydown', (event) => {
+      const keyPressed = event.keyCode;
+      const left = 37;
+      const up = 38;
+      const right = 39;
+      const down = 40;
 
-function startGame() {
-  if (!gameRunning) {
-    gameRunning = true;
-    gameOver = false;
-    document.getElementById('game-over').style.display = 'none';
+      if (keyPressed === left && direction !== 'right') {
+        direction = 'left';
+      }
+
+      if (keyPressed === up && direction !== 'down') {
+        direction = 'up';
+      }
+
+      if (keyPressed === right && direction !== 'left') {
+        direction = 'right';
+      }
+
+      if (keyPressed === down && direction !== 'up') {
+        direction = 'down';
+      }
+    });
+
     main();
-  }
-}
-
-function stopGame() {
-  gameRunning = false;
-}
-
-// Initialize the game
-restartGame();
+  </script>
+</body>
+</html>
